--- a/Kubernetes-Manifests-file/Frontend/deployment.yaml
+++ b/Kubernetes-Manifests-file/Frontend/deployment.yaml
@@ -29,6 +29,6 @@ spec:
         imagePullPolicy: Always
         env:
           - name: REACT_APP_BACKEND_URL
-            value: "http://demo.testsprint360.com/api/tasks"
+            value: "https://demo.testsprint360.com/api/tasks"
         ports:
         - containerPort: 3000
